# PunchCard

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  README.md  main.cpp  qrcode.cpp  qrcode.h  resources.qrc  userfilterproxymodel.cpp  userfilterproxymodel.h
.github/workflows/: main.yml
SupaQML/: supaauth.cpp  supaserver.cpp  supaserver.h  supasocket.cpp  supasocket.h
android/: AndroidManifest.xml
qml/: CompanyHomePage.qml  CompanySignUp.qml  ConfirmSignUpPage.qml  CustomerHomePage.qml  CustomerPunchCardPage.qml  DeleteAccount.qml  LoginPage.qml  Qt6ScannerOverlay.qml  RoyaltyCard.qml  ScanQRCodePage.qml  Settings.qml  SignUpPage.qml  UpdateEmail.qml  UpdatePassword.qml  userData.js
